--- a/css/main.css
+++ b/css/main.css
@@ -172,3 +172,31 @@ input[type="checkbox"] {
 .btn-no-cover:hover {
     text-decoration: underline;
 }
+.item {
+    background: #111;
+    color: red;
+    padding: 8px 12px;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-bottom: 10px;
+    transition: background 0.3s;
+}
+.item:hover {
+    background: #222;
+}
+.thumbnail {
+    width: 100px;
+    height: 100px;
+    margin-top: 8px;
+    border-radius: 10px;
+    background-size: cover;
+    background-position: center;
+    opacity: 0;
+    height: 0;
+    overflow: hidden;
+    transition: all 0.3s ease;
+}
+.thumbnail.show {
+    opacity: 1;
+    height: 100px;
+}
