--- a/css/main.css
+++ b/css/main.css
@@ -287,3 +287,8 @@ input[type="checkbox"] {
     border-radius: 6px;
     cursor: pointer;
 }
+.records .user {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
