--- a/css/main.css
+++ b/css/main.css
@@ -292,6 +292,16 @@ input[type="checkbox"] {
     align-items: center;
     flex-wrap: wrap; /* so creators still break nicely */
 }
+.table .level {
+    display: flex;
+    align-items: center;
+}
+
+.cbf-icon {
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+}
 
 .records .user {
     display: flex;
